added hover effect to images

--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,12 @@
 		.navbar-inverse .navbar-brand{
 			color: white;
 		}
+		img{
+			transition: all 1s;
+		}
+		img:hover{
+			transform: scale(1.1);
+		}
 	</style>
 </head>
 <body>
